sord (0.13.0) unstable;

  * Reduce memory usage and increase performance with a better data structure
  * Add sord_erase() for erasing statements via an iterator
  * Fix bugs with stores that contain both graphs and default graph statements
  * Fix compilation on compilers that do not support -pthread flag
  * This release does not break the ABI, but the semantics of iterators has
    changed: any modification to a model invalidates iterators on that model

 -- David Robillard <d@drobilla.net>  Tue, 16 Dec 2014 12:35:54 -0500

sord (0.12.2) stable;

  * Fix iteration over an entire graph (* * * graph)
  * sordmm.hpp: Remove unused members
  * Update to waf 1.7.16

 -- David Robillard <d@drobilla.net>  Fri, 08 Aug 2014 18:03:02 -0400

sord (0.12.0) stable;

  * Update to waf 1.7.9 and autowaf r90 (install docs to versioned directory)
  * Add sord_get() for easily getting single property values
  * sord_validate: Pass type check when range is xsd:anyURI and value is a URI
  * sord_validate: Support any subClassOf rdf:Property, not just baked-in ones
  * sordmm.hpp: Add convenient constructors for decimal and integer literals
  * sordmm.hpp: Add Node::to_serd_node()
  * sordmm.hpp: Don't automatically add RDF namespace prefix to world

 -- David Robillard <d@drobilla.net>  Mon, 18 Feb 2013 11:05:59 -0500

sord (0.10.4) stable;

  * Implement better data type validation in sord_validate conformant with
    the XSD and OWL specifications
  * Fix memory leaks in sord_validate
  * Install sord_validate man page
  * Disable timestamps in HTML documentation for reproducible build

 -- David Robillard <d@drobilla.net>  Sun, 14 Oct 2012 18:23:55 -0400

sord (0.10.0) stable;

  * Add error callback to world for custom error reporting
  * Performance and space (per node) improvements
  * SSE4.2 accelerated hashing for node interning, where available
  * Make all 'zix' symbols private to avoid symbol clashes in static builds